--- a/static/index.html
+++ b/static/index.html
@@ -67,11 +67,11 @@
         </div>
         <div class="description-container">
             <div>
-                <h4>NGC 3314: When Galaxies Overlap</h4>
+                <h4 id="apod_title"></h4>
             </div>
 
             <div>
-                <p style="text-align: center;">Why doesn't the nearby galaxy create a gravitational lensing effect on
+                <p id= "apod_description" style="text-align: center;">Why doesn't the nearby galaxy create a gravitational lensing effect on
                     the background galaxy? It does, but since both galaxies are so nearby, the angular shift is much
                     smaller than the angular sizes of the galaxies themselves. The featured Hubble image of NGC 3314
                     shows two large spiral galaxies which happen to line up exactly. The foreground spiral NGC 3314a
