Add new functionalities to the route

--- a/static/index.html
+++ b/static/index.html
@@ -63,11 +63,11 @@
         </div>
         <div style="clear: both;"></div>
         <div class="apod-container">
-            <img src="./apod-example.png">
+            <img src="https://apod.nasa.gov/apod/image/2111/moonwalk1c1024.jpg">
         </div>
         <div class="description-container">
             <div>
-                <h4 id="apod_title"></h4>
+                <h4 id="apod_title">APOD TITLE</h4>
             </div>
 
             <div>
